# stockagent

./: .env  .gitignore  Dockerfile  README.md  app.py  calculator_tool.py  main.py  outsideapp.py  pyproject.toml  requirements.txt  sec_tools.py  stock_agent.py
course-env/: pyvenv.cfg
course-env/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
