[project]
name = "stockagent"
version = "0.1.0"
description = "Multi-agent AI stock analysis system using CrewAI, SEC filings, and local LLMs"
authors = [
    { name = "Your Name", email = "your_email@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "crewai>=0.80.0",
    "crewai-tools>=0.12.0",
    "sec-api",
    "requests",
    "html2text",
    "python-dotenv",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
